# unet-embroidery-seg

./: .env.example  .gitignore  README.md  convert_and_upload.py  download_sam3_model.sh  labelme_converter.py  predict.py  pyproject.toml  run.sh  sam3_relabel.py  train.py  val.py
model/: model_factory.py  resnet_backbone.py  unet_attention.py  unet_dualdense.py  unet_multitask.py  unet_plain.py  unet_resnet.py  unet_training.py
scripts/: make_tables.py  reannotate_sam3.py
utils/: dataloader.py  hf_dataloader.py  plot_results.py  train_and_eval.py  utils.py  vis_export.py
